fix white/spacing issues in game lobby page

--- a/client/src/stylesheets/chat.scss
+++ b/client/src/stylesheets/chat.scss
@@ -67,6 +67,7 @@
 
 .chat-body {
   font-size: 15px;
+  overflow-wrap: anywhere;
 }
 
 .text-editor-wrapper {
